feature | add cart feature

--- a/src/main/resources/static/etrade/index-1.html
+++ b/src/main/resources/static/etrade/index-1.html
@@ -144,7 +144,7 @@
                                 <ul class="axil-submenu">
                                     <li><a href="wishlist.html">Wishlist</a></li>
                                     <li><a href="cart.html">Cart</a></li>
-                                    <li><a href="checkout.html">Checkout</a></li>
+                                    <li><a href="../../templates/user/checkout.html">Checkout</a></li>
                                     <li><a href="my-account.html">Account</a></li>
                                     <li><a href="sign-up.html">Sign Up</a></li>
                                     <li><a href="sign-in.html">Sign In</a></li>
@@ -2520,7 +2520,7 @@
             </h3>
             <div class="group-btn">
                 <a href="cart.html" class="axil-btn btn-bg-primary viewcart-btn">View Cart</a>
-                <a href="checkout.html" class="axil-btn btn-bg-secondary checkout-btn">Checkout</a>
+                <a href="../../templates/user/checkout.html" class="axil-btn btn-bg-secondary checkout-btn">Checkout</a>
             </div>
         </div>
     </div>
