working lazy loading

--- a/src/main/resources/static/etrade/index-1.html
+++ b/src/main/resources/static/etrade/index-1.html
@@ -128,7 +128,7 @@
                                 <a href="#">Shop</a>
                                 <ul class="axil-submenu">
                                     <li><a href="shop-sidebar.html">Shop With Sidebar</a></li>
-                                    <li><a href="shop.html">Shop no Sidebar</a></li>
+                                    <li><a href="../../templates/user/shop.html">Shop no Sidebar</a></li>
                                     <li><a href="single-product.html">Product Variation 1</a></li>
                                     <li><a href="single-product-2.html">Product Variation 2</a></li>
                                     <li><a href="single-product-3.html">Product Variation 3</a></li>
@@ -246,7 +246,7 @@
                                 <h1 class="title">Roco Wireless Headphone</h1>
                                 <div class="slide-action">
                                     <div class="shop-btn">
-                                        <a href="shop.html" class="axil-btn btn-bg-white"><i
+                                        <a href="../../templates/user/shop.html" class="axil-btn btn-bg-white"><i
                                                 class="fal fa-shopping-cart"></i>Shop Now</a>
                                     </div>
                                     <div class="item-rating">
@@ -278,7 +278,7 @@
                                 <h1 class="title">Smart Digital Watch</h1>
                                 <div class="slide-action">
                                     <div class="shop-btn">
-                                        <a href="shop.html" class="axil-btn btn-bg-white"><i
+                                        <a href="../../templates/user/shop.html" class="axil-btn btn-bg-white"><i
                                                 class="fal fa-shopping-cart"></i>Shop Now</a>
                                     </div>
                                     <div class="item-rating">
@@ -310,7 +310,7 @@
                                 <h1 class="title">Roco Wireless Headphone</h1>
                                 <div class="slide-action">
                                     <div class="shop-btn">
-                                        <a href="shop.html" class="axil-btn btn-bg-white"><i
+                                        <a href="../../templates/user/shop.html" class="axil-btn btn-bg-white"><i
                                                 class="fal fa-shopping-cart"></i>Shop Now</a>
                                     </div>
                                     <div class="item-rating">
@@ -342,7 +342,7 @@
                                 <h1 class="title">Smart Digital Watch</h1>
                                 <div class="slide-action">
                                     <div class="shop-btn">
-                                        <a href="shop.html" class="axil-btn btn-bg-white"><i
+                                        <a href="../../templates/user/shop.html" class="axil-btn btn-bg-white"><i
                                                 class="fal fa-shopping-cart"></i>Shop Now</a>
                                     </div>
                                     <div class="item-rating">
@@ -1314,7 +1314,8 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 text-center mt--20 mt_sm--0">
-                    <a href="shop.html" class="axil-btn btn-bg-lighter btn-load-more">View All Products</a>
+                    <a href="../../templates/user/shop.html" class="axil-btn btn-bg-lighter btn-load-more">View All
+                        Products</a>
                 </div>
             </div>
 
@@ -1963,7 +1964,7 @@
             <div class="row">
                 <div class="col-lg-6 mb--30">
                     <div class="single-poster">
-                        <a href="shop.html">
+                        <a href="../../templates/user/shop.html">
                             <img src="assets/images/product/poster/poster-01.png" alt="eTrade promotion poster">
                             <div class="poster-content">
                                 <div class="inner">
@@ -2110,7 +2111,7 @@
                                 <li><a href="sign-up.html">Login / Register</a></li>
                                 <li><a href="cart.html">Cart</a></li>
                                 <li><a href="wishlist.html">Wishlist</a></li>
-                                <li><a href="shop.html">Shop</a></li>
+                                <li><a href="../../templates/user/shop.html">Shop</a></li>
                             </ul>
                         </div>
                     </div>
@@ -2365,7 +2366,7 @@
         <div class="card-body">
             <div class="search-result-header">
                 <h6 class="title">24 Result Found</h6>
-                <a href="shop.html" class="view-all">View All</a>
+                <a href="../../templates/user/shop.html" class="view-all">View All</a>
             </div>
             <div class="psearch-results">
                 <div class="axil-product-list">
@@ -2537,7 +2538,8 @@
                     <h3 class="title">Best Sales Offer<br> Grab Yours</h3>
                 </div>
                 <div class="poster-countdown countdown"></div>
-                <a href="shop.html" class="axil-btn btn-bg-primary">Shop Now <i class="fal fa-long-arrow-right"></i></a>
+                <a href="../../templates/user/shop.html" class="axil-btn btn-bg-primary">Shop Now <i
+                        class="fal fa-long-arrow-right"></i></a>
             </div>
         </div>
     </div>
