wishlist feature | full CRUD wishlist, and edit inc - dec of cart

--- a/src/main/resources/static/etrade/blog-audio.html
+++ b/src/main/resources/static/etrade/blog-audio.html
@@ -134,7 +134,7 @@
                             <li class="menu-item-has-children">
                                 <a href="#">Pages</a>
                                 <ul class="axil-submenu">
-                                    <li><a href="wishlist.html">Wishlist</a></li>
+                                    <li><a href="../../templates/user/wishlist.html">Wishlist</a></li>
                                     <li><a href="cart.html">Cart</a></li>
                                     <li><a href="../../templates/user/checkout.html">Checkout</a></li>
                                     <li><a href="my-account.html">Account</a></li>
@@ -181,7 +181,7 @@
                             </a>
                         </li>
                         <li class="wishlist">
-                            <a href="wishlist.html">
+                            <a href="../../templates/user/wishlist.html">
                                 <i class="flaticon-heart"></i>
                             </a>
                         </li>
@@ -1026,7 +1026,7 @@
                                 <li><a href="my-account.html">My Account</a></li>
                                 <li><a href="sign-up.html">Login / Register</a></li>
                                 <li><a href="cart.html">Cart</a></li>
-                                <li><a href="wishlist.html">Wishlist</a></li>
+                                <li><a href="../../templates/user/wishlist.html">Wishlist</a></li>
                                 <li><a href="../../templates/user/shop.html">Shop</a></li>
                             </ul>
                         </div>
@@ -1247,7 +1247,7 @@
                                         <ul class="product-action d-flex-center mb--0">
                                             <li class="add-to-cart"><a href="cart.html" class="axil-btn btn-bg-primary">Add
                                                 to Cart</a></li>
-                                            <li class="wishlist"><a href="wishlist.html"
+                                            <li class="wishlist"><a href="../../templates/user/wishlist.html"
                                                                     class="axil-btn wishlist-btn"><i
                                                     class="far fa-heart"></i></a></li>
                                         </ul>
@@ -1309,7 +1309,7 @@
                         </div>
                         <div class="product-cart">
                             <a href="cart.html" class="cart-btn"><i class="fal fa-shopping-cart"></i></a>
-                            <a href="wishlist.html" class="cart-btn"><i class="fal fa-heart"></i></a>
+                            <a href="../../templates/user/wishlist.html" class="cart-btn"><i class="fal fa-heart"></i></a>
                         </div>
                     </div>
                 </div>
@@ -1337,7 +1337,7 @@
                         </div>
                         <div class="product-cart">
                             <a href="cart.html" class="cart-btn"><i class="fal fa-shopping-cart"></i></a>
-                            <a href="wishlist.html" class="cart-btn"><i class="fal fa-heart"></i></a>
+                            <a href="../../templates/user/wishlist.html" class="cart-btn"><i class="fal fa-heart"></i></a>
                         </div>
                     </div>
                 </div>
