--- a/src/main/resources/static/etrade/shop-sidebar.html
+++ b/src/main/resources/static/etrade/shop-sidebar.html
@@ -134,7 +134,7 @@
                             <li class="menu-item-has-children">
                                 <a href="#">Pages</a>
                                 <ul class="axil-submenu">
-                                    <li><a href="wishlist.html">Wishlist</a></li>
+                                    <li><a href="../../templates/user/wishlist.html">Wishlist</a></li>
                                     <li><a href="cart.html">Cart</a></li>
                                     <li><a href="../../templates/user/checkout.html">Checkout</a></li>
                                     <li><a href="my-account.html">Account</a></li>
@@ -181,7 +181,7 @@
                             </a>
                         </li>
                         <li class="wishlist">
-                            <a href="wishlist.html">
+                            <a href="../../templates/user/wishlist.html">
                                 <i class="flaticon-heart"></i>
                             </a>
                         </li>
@@ -402,7 +402,7 @@
                                     </div>
                                     <div class="product-hover-action">
                                         <ul class="cart-action">
-                                            <li class="wishlist"><a href="wishlist.html"><i
+                                            <li class="wishlist"><a href="../../templates/user/wishlist.html"><i
                                                     class="far fa-heart"></i></a></li>
                                             <li class="select-option"><a href="cart.html">Add to Cart</a></li>
                                             <li class="quickview"><a href="#" data-bs-toggle="modal"
@@ -431,7 +431,7 @@
                                     </a>
                                     <div class="product-hover-action">
                                         <ul class="cart-action">
-                                            <li class="wishlist"><a href="wishlist.html"><i
+                                            <li class="wishlist"><a href="../../templates/user/wishlist.html"><i
                                                     class="far fa-heart"></i></a></li>
                                             <li class="select-option"><a href="cart.html">Add to Cart</a></li>
                                             <li class="quickview"><a href="#" data-bs-toggle="modal"
@@ -463,7 +463,7 @@
                                     </div>
                                     <div class="product-hover-action">
                                         <ul class="cart-action">
-                                            <li class="wishlist"><a href="wishlist.html"><i
+                                            <li class="wishlist"><a href="../../templates/user/wishlist.html"><i
                                                     class="far fa-heart"></i></a></li>
                                             <li class="select-option"><a href="cart.html">Add to Cart</a></li>
                                             <li class="quickview"><a href="#" data-bs-toggle="modal"
@@ -495,7 +495,7 @@
                                     </div>
                                     <div class="product-hover-action">
                                         <ul class="cart-action">
-                                            <li class="wishlist"><a href="wishlist.html"><i
+                                            <li class="wishlist"><a href="../../templates/user/wishlist.html"><i
                                                     class="far fa-heart"></i></a></li>
                                             <li class="select-option"><a href="cart.html">Add to Cart</a></li>
                                             <li class="quickview"><a href="#" data-bs-toggle="modal"
@@ -524,7 +524,7 @@
                                     </a>
                                     <div class="product-hover-action">
                                         <ul class="cart-action">
-                                            <li class="wishlist"><a href="wishlist.html"><i
+                                            <li class="wishlist"><a href="../../templates/user/wishlist.html"><i
                                                     class="far fa-heart"></i></a></li>
                                             <li class="select-option"><a href="cart.html">Add to Cart</a></li>
                                             <li class="quickview"><a href="#" data-bs-toggle="modal"
@@ -556,7 +556,7 @@
                                     </div>
                                     <div class="product-hover-action">
                                         <ul class="cart-action">
-                                            <li class="wishlist"><a href="wishlist.html"><i
+                                            <li class="wishlist"><a href="../../templates/user/wishlist.html"><i
                                                     class="far fa-heart"></i></a></li>
                                             <li class="select-option"><a href="cart.html">Add to Cart</a></li>
                                             <li class="quickview"><a href="#" data-bs-toggle="modal"
@@ -588,7 +588,7 @@
                                     </div>
                                     <div class="product-hover-action">
                                         <ul class="cart-action">
-                                            <li class="wishlist"><a href="wishlist.html"><i
+                                            <li class="wishlist"><a href="../../templates/user/wishlist.html"><i
                                                     class="far fa-heart"></i></a></li>
                                             <li class="select-option"><a href="cart.html">Add to Cart</a></li>
                                             <li class="quickview"><a href="#" data-bs-toggle="modal"
@@ -617,7 +617,7 @@
                                     </a>
                                     <div class="product-hover-action">
                                         <ul class="cart-action">
-                                            <li class="wishlist"><a href="wishlist.html"><i
+                                            <li class="wishlist"><a href="../../templates/user/wishlist.html"><i
                                                     class="far fa-heart"></i></a></li>
                                             <li class="select-option"><a href="cart.html">Add to Cart</a></li>
                                             <li class="quickview"><a href="#" data-bs-toggle="modal"
@@ -649,7 +649,7 @@
                                     </div>
                                     <div class="product-hover-action">
                                         <ul class="cart-action">
-                                            <li class="wishlist"><a href="wishlist.html"><i
+                                            <li class="wishlist"><a href="../../templates/user/wishlist.html"><i
                                                     class="far fa-heart"></i></a></li>
                                             <li class="select-option"><a href="cart.html">Add to Cart</a></li>
                                             <li class="quickview"><a href="#" data-bs-toggle="modal"
@@ -793,7 +793,7 @@
                                 <li><a href="my-account.html">My Account</a></li>
                                 <li><a href="sign-up.html">Login / Register</a></li>
                                 <li><a href="cart.html">Cart</a></li>
-                                <li><a href="wishlist.html">Wishlist</a></li>
+                                <li><a href="../../templates/user/wishlist.html">Wishlist</a></li>
                                 <li><a href="../../templates/user/shop.html">Shop</a></li>
                             </ul>
                         </div>
@@ -1014,7 +1014,7 @@
                                         <ul class="product-action d-flex-center mb--0">
                                             <li class="add-to-cart"><a href="cart.html" class="axil-btn btn-bg-primary">Add
                                                 to Cart</a></li>
-                                            <li class="wishlist"><a href="wishlist.html"
+                                            <li class="wishlist"><a href="../../templates/user/wishlist.html"
                                                                     class="axil-btn wishlist-btn"><i
                                                     class="far fa-heart"></i></a></li>
                                         </ul>
@@ -1076,7 +1076,8 @@
                         </div>
                         <div class="product-cart">
                             <a href="cart.html" class="cart-btn"><i class="fal fa-shopping-cart"></i></a>
-                            <a href="wishlist.html" class="cart-btn"><i class="fal fa-heart"></i></a>
+                            <a href="../../templates/user/wishlist.html" class="cart-btn"><i
+                                    class="fal fa-heart"></i></a>
                         </div>
                     </div>
                 </div>
@@ -1104,7 +1105,8 @@
                         </div>
                         <div class="product-cart">
                             <a href="cart.html" class="cart-btn"><i class="fal fa-shopping-cart"></i></a>
-                            <a href="wishlist.html" class="cart-btn"><i class="fal fa-heart"></i></a>
+                            <a href="../../templates/user/wishlist.html" class="cart-btn"><i
+                                    class="fal fa-heart"></i></a>
                         </div>
                     </div>
                 </div>
